tests/ui/parser/bounds-type-where.stderr
error: expected one of `!`, `(`, `+`, `::`, `:`, `<`, `==`, or `=`, found `,`
  --> $DIR/bounds-type-where.rs:8:15
   |
LL | type A where T, = u8;
   |               ^ expected one of 8 possible tokens

error: aborting due to 1 previous error

